# visor

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test.xml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  npm-release.yml  pypi-release.yml
docs/: concepts.mdx  docs.json  index.mdx  platforms-and-runtime.mdx  quickstart.mdx
docs/essentials/: images.mdx  settings.mdx
docs/features/: artifacts-and-reports.mdx  assertions-and-determinism.mdx  evidence-capture.mdx  interactions.mdx  scenarios.mdx  targeting-and-selectors.mdx
docs/reference/: command-reference.mdx  errors-and-exit-codes.mdx  response-schema.mdx  scenario-schema.mdx
framework/: adapters.py  appium_lifecycle.py  errors.py  models.py  report.py  runner.py  utils.py  validator.py
scenarios/: assertion-fail-smoke.json  checkout-smoke.json  empty-app-counter.json
scripts/: release.mjs
src/: adapters.ts  appiumLifecycle.ts  cli.ts  errors.ts  index.ts  main.ts  report.ts  runner.ts  types.ts  utils.ts  validator.ts
tests/: __init__.py  test_adapters.py  test_appium_lifecycle.py  test_cli.py
tests-ts/: adapters.test.ts  appiumLifecycle.test.ts  cli.test.ts  validator.test.ts
visor/: cli.py
