[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visor"
version = "0.1.0"
description = "Visor CLI for LLM-driven mobile app interaction and artifact capture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Appium-Python-Client==5.2.7",
  "selenium==4.41.0",
]

[project.scripts]
visor = "visor.cli:main"

[tool.setuptools.packages.find]
include = ["framework*", "visor*"]
